Updated with cluster creation fix

--- a/mongo_with_volume_type.yaml
+++ b/mongo_with_volume_type.yaml
@@ -264,7 +264,6 @@ resources:
             $db_pass: { get_param: db_pass }
             $commandLog: { get_param: commandLog }
             $isprodvm: { get_param: isprodvm}
-            $db: { get_param: custom_db }
             $ip1: { get_attr: [mongo1_floatingip, floating_ip_address] }
             $ip2: { get_attr: [mongo2_floatingip, floating_ip_address] }
             $ip3: { get_attr: [mongo3_floatingip, floating_ip_address] }
@@ -317,23 +316,19 @@ resources:
             chmod 400 /root/keys/mongo-keyfile
             chown 999:999 /root/keys/mongo-keyfile
 
-            docker pull mongo
-            docker run --name mongo-node -d -v ~/mongo:/data/db -p 27017:27017 mongo --replSet "rs0"
+            docker pull mongo:4.2.0
+            docker run --name mongo-node -d -v ~/mongo:/data/db -p 27017:27017 mongo:4.2.0 --replSet "rs0"
             cat << EOF > /tmp/config.py
 
             #!/usr/bin/python
             import pymongo
             import time
             client = pymongo.MongoClient('mongodb://localhost:27017/')
-            config = {"_id":"rs0","members":[{"_id":0,"host": "$ip1:27017" },{"_id":1,"host": "$ip2:27017" },{"_id":2,"host": "$ip3:27017" }]}
+            config = {"_id":"rs0","members":[{"_id":0,"host": "$ip1:27017","priority": 30 },{"_id":1,"host": "$ip2:27017", "priority": 20 },{"_id":2,"host": "$ip3:27017", "priority": 10 }]}
             client.admin.command("replSetInitiate", config)
-            time.sleep(20)
+            time.sleep(60)
             print client.admin.command("createUser", "root", pwd="$db_pass", roles=["root"])
             print client.admin.command("createUser", "admin", pwd="@dmin", roles=["root"])
-            mydb = client.$db
-            item = { "Name" : "Test Record" }
-            record = mydb.item
-            print record.insert_one(item)
             EOF
             
             chmod +x /tmp/config.py
@@ -345,11 +340,13 @@ resources:
             docker -H $ip2 rm -f mongo-node
             docker -H $ip3 rm -f mongo-node
             docker rm -f mongo-node
-            docker run --name mongo-node --restart always  -d  -v ~/mongo:/data/db -v /root/keys/:/opt/mongo  -p 27017:27017 mongo --auth --keyFile /opt/mongo/mongo-keyfile --replSet "rs0"
-            sleep 2
-            docker -H $ip2 run --name mongo-node --restart always -d -v ~/mongo:/data/db -v /root/keys/:/opt/mongo  -p 27017:27017 mongo --auth --keyFile /opt/mongo/mongo-keyfile --replSet "rs0"
-            docker -H $ip3 run --name mongo-node --restart always -d -v ~/mongo:/data/db -v /root/keys/:/opt/mongo  -p 27017:27017 mongo --auth --keyFile /opt/mongo/mongo-keyfile --replSet "rs0"
+            docker run --name mongo-node --restart always  -d  -v ~/mongo:/data/db -v /root/keys/:/opt/mongo  -p 27017:27017 mongo:4.2.0 --auth --keyFile /opt/mongo/mongo-keyfile --replSet "rs0"
 
+            docker -H $ip2 run --name mongo-node --restart always -d -v ~/mongo:/data/db -v /root/keys/:/opt/mongo  -p 27017:27017 mongo:4.2.0 --auth --keyFile /opt/mongo/mongo-keyfile --replSet "rs0"
+            docker -H $ip3 run --name mongo-node --restart always -d -v ~/mongo:/data/db -v /root/keys/:/opt/mongo  -p 27017:27017 mongo:4.2.0 --auth --keyFile /opt/mongo/mongo-keyfile --replSet "rs0"
+            sleep 60
+            
+            
             export http_proxy=http://$proxy_host:$proxy_port
             export https_proxy=http://$proxy_host:$proxy_port
 
@@ -453,7 +450,8 @@ resources:
             echo $key >> /root/keys/mongo-keyfile
             chmod 400 /root/keys/mongo-keyfile
             chown 999:999 /root/keys/mongo-keyfile
-            docker run --name mongo-node -d -v /etc/hosts:/etc/hosts -v ~/mongo:/data/db -p 27017:27017 mongo --replSet "rs0"
+            docker pull mongo:4.2.0
+            docker run --name mongo-node -d -v /etc/hosts:/etc/hosts -v ~/mongo:/data/db -p 27017:27017 mongo:4.2.0  --replSet "rs0"
 
 
             # Installing Telegraf agent
@@ -555,7 +553,8 @@ resources:
             echo $key >> /root/keys/mongo-keyfile
             chmod 400 /root/keys/mongo-keyfile
             chown 999:999 /root/keys/mongo-keyfile
-            docker run --name mongo-node -d -v /etc/hosts:/etc/hosts -v ~/mongo:/data/db -p 27017:27017 mongo --replSet "rs0"
+            docker pull mongo:4.2.0 
+            docker run --name mongo-node -d -v /etc/hosts:/etc/hosts -v ~/mongo:/data/db -p 27017:27017 mongo:4.2.0 --replSet "rs0"
 
             # Installing Telegraf agent
             curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
@@ -588,6 +587,9 @@ outputs:
   db_engine: 
     description: Database engine name
     value: MongoDB
+  db_engine_version: 
+    description: Database Version
+    value: MongoDB v4.2.0
   keypair: 
     description: Keypair to connect to Database instances
     value: { get_param: key }
@@ -628,4 +630,3 @@ outputs:
           $host1: { get_attr: [mongo1_floatingip, floating_ip_address] }
           $host2: { get_attr: [mongo2_floatingip, floating_ip_address] }
           $host3: { get_attr: [mongo3_floatingip, floating_ip_address] }
-
