--- a/nodejs.yaml
+++ b/nodejs.yaml
@@ -81,6 +81,7 @@ resources:
     type: OS::Neutron::SecurityGroup
     properties:
       name: { get_param: securityGroup }
+      description: Default security group created by JAWS console
       rules: [
              {"direction": ingress,
               "remote_ip_prefix": 0.0.0.0/0,
