--- a/mean.yaml
+++ b/mean.yaml
@@ -81,6 +81,7 @@ resources:
     type: OS::Neutron::SecurityGroup
     properties:
       name: { get_param: securityGroup }
+      description: Default security group created by JAWS console
       rules: [ {"direction": egress,
               "remote_ip_prefix": 0.0.0.0/0,
               "port_range_min": 1,
