Manage security groups (#21)
Updated Heat Templates for manage security groups feature

--- a/lamp.yaml
+++ b/lamp.yaml
@@ -1,7 +1,11 @@
-heat_template_version: 2015-04-30
+heat_template_version: 2016-10-14
 description: >
   creating lamp stack linux, apache mysql and php
 parameters:
+  sg_type:
+    type: string
+    default: default
+
   key:
     type: string
     description: >
@@ -63,14 +67,16 @@ parameters:
     type: boolean
     default: false
 
-
-
+conditions:
+  custom: {equals: [{get_param: sg_type}, "custom"]}
+  default: {equals: [{get_param: sg_type}, "default"]}
 
 resources:
   security_group:
     type: OS::Neutron::SecurityGroup
     properties:
       name: { get_param: securityGroup }
+      description: Default security group created by JAWS console
       rules: [ {"direction": egress,
               "remote_ip_prefix": 0.0.0.0/0,
               "port_range_min": 1,
@@ -103,6 +109,8 @@ resources:
               "protocol": tcp}
 
             ]
+    condition: default
+
 
   server_port:
     type: OS::Neutron::Port
@@ -111,7 +119,7 @@ resources:
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
       security_groups:
-        - { get_resource: security_group }
+        - { if: ["custom", { get_param: securityGroup }, { get_resource: security_group } ] }
 
 
   server:
