--- a/none.yaml
+++ b/none.yaml
@@ -1,7 +1,14 @@
-heat_template_version: 2013-05-23
+heat_template_version: 2016-10-14
+
 description: >
   Create a simple VM using Heat
+
+
 parameters:
+  sg_type:
+    type: string
+    default: default
+
   key:
     type: string
     description: >
@@ -69,11 +76,17 @@ parameters:
     default: false
 
 
+conditions:
+  custom: {equals: [{get_param: sg_type}, "custom"]}
+  default: {equals: [{get_param: sg_type}, "default"]}
+
+
 resources:
   security_group:
     type: OS::Neutron::SecurityGroup
     properties:
       name: { get_param: securityGroup }
+      description: Default security group created by JAWS console
       rules: [
              {"direction": ingress,
               "remote_ip_prefix": 0.0.0.0/0,
@@ -95,6 +108,7 @@ resources:
               "protocol": tcp}
 
             ]
+    condition: default
 
   server_port:
     type: OS::Neutron::Port
@@ -103,8 +117,7 @@ resources:
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
       security_groups:
-        - { get_resource: security_group }
-
+        - { if: ["custom", { get_param: securityGroup }, { get_resource: security_group } ] }
 
   server:
     type: OS::Nova::Server
@@ -119,8 +132,6 @@ resources:
         - device_name: vda
           volume_id: { get_resource: bootable_volume }
           delete_on_termination: True
-
-
 
       user_data:
         str_replace:
@@ -233,7 +244,6 @@ resources:
             $commandLog: { get_param: commandLog }
             $serverName: { get_param: serverName }
 
-
   server_floating_ip:
     type: OS::Nova::FloatingIP
     properties:
@@ -252,7 +262,6 @@ resources:
       size: { get_param: volumeSize }
       availability_zone: { get_param: availabilityZone }
       image: { get_param: bootImage }
-
 
 
 outputs:
