--- a/nodejs.yaml
+++ b/nodejs.yaml
@@ -1,8 +1,12 @@
-heat_template_version: 2013-05-23
+heat_template_version: 2016-10-14
 description: >
   creating nodejs stack
 
 parameters:
+  sg_type:
+    type: string
+    default: default
+
   key:
     type: string
     description: >
@@ -64,14 +68,16 @@ parameters:
     type: boolean
     default: false
 
-
-
+conditions:
+  custom: {equals: [{get_param: sg_type}, "custom"]}
+  default: {equals: [{get_param: sg_type}, "default"]}
 
 resources:
   security_group:
     type: OS::Neutron::SecurityGroup
     properties:
       name: { get_param: securityGroup }
+      description: Default security group created by JAWS console
       rules: [
              {"direction": ingress,
               "remote_ip_prefix": 0.0.0.0/0,
@@ -92,6 +98,7 @@ resources:
               "ethertype": IPv4,
               "protocol": tcp}
             ]
+    condition: default
 
   server_port:
     type: OS::Neutron::Port
@@ -99,8 +106,8 @@ resources:
       network_id: { get_param: internalNet }
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
-      security_groups:
-        - { get_resource: security_group }
+      security_groups: 
+        - { if: ["custom", { get_param: securityGroup }, { get_resource: security_group } ] }
 
 
   server:
