--- a/nodejs.yaml
+++ b/nodejs.yaml
@@ -106,7 +106,7 @@ resources:
       network_id: { get_param: internalNet }
       fixed_ips:
         - subnet_id: { get_param: internalSubnet  }
-      security_groups: 
+      security_groups:
         - { if: ["custom", { get_param: securityGroup }, { get_resource: security_group } ] }
 
 
@@ -134,10 +134,10 @@ resources:
             rm -rf /var/lib/apt/lists/lock
             export http_proxy=$proxy
             export https_proxy=$proxy
-            export no_proxy=127.0.0.1,localhost,10,192.168
+            export no_proxy=127.0.0.1,localhost,10,192.168,.jio.com
             echo "export http_proxy=$proxy" >> /etc/profile.d/proxy.sh
             echo "export https_proxy=$proxy" >> /etc/profile.d/proxy.sh
-            echo "export no_proxy=127.0.0.1,localhost,10,192.168" >> /etc/profile.d/proxy.sh
+            echo "export no_proxy=127.0.0.1,localhost,10,192.168,.jio.com" >> /etc/profile.d/proxy.sh
 
             ##### Update sources.list based on bootImage
             if [ $bootImage = "Ubuntu1604" ]
